syntax = "proto3";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
    // Hoge
    rpc SayHelloHoge (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message PermissionDeniedDetail {
    enum PermissionDeniedType {
        TYPE_NONE = 0;
        TYPE_HOGE = 1;
    }
    enum PermissionDeniedCode {
        CODE_NONE = 0;
        CODE_UNKNOWN = 1;
        CODE_FUGA = 10000;
    }

    PermissionDeniedType type = 1;
    PermissionDeniedCode code = 2;
}